; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_edit.c_ins_compl_del_pum.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_edit.c_ins_compl_del_pum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compl_match_array = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ins_compl_del_pum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ins_compl_del_pum() #0 {
  %1 = load i32*, i32** @compl_match_array, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = call i32 (...) @pum_undisplay()
  %5 = load i32*, i32** @compl_match_array, align 8
  %6 = call i32 @vim_free(i32* %5)
  store i32* null, i32** @compl_match_array, align 8
  br label %7

7:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @pum_undisplay(...) #1

declare dso_local i32 @vim_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
